--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no jest specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
